# Eternal

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  LICENSE.md  README.md  vcpkg.json
Applications/: CMakeLists.txt  Sandbox.cpp
CMake/: EternalConfig.cmake.in  EternalExport.cmake  EternalLibrary.cmake  EternalPackage.cmake
Eternal/: CMakeLists.txt
Eternal/Platform/Win32/Eternal/Platform/: NativeWindow.cpp  NativeWindow.h
Eternal/Private/Eternal/Private/Core/: ApplicationMonitor.cpp  ApplicationMonitor.h  ApplicationPrivate.cpp  ApplicationPrivate.h  Core.cpp  Core.h  CorePlugin.cpp  CorePlugin.h  EngineManager.cpp  EngineManager.h  EngineMonitor.cpp  EngineMonitor.h  EnginePrivate.cpp  EnginePrivate.h  EventLoopManager.cpp  EventLoopManager.h  EventLoopMonitor.cpp  EventLoopMonitor.h  EventLoopPrivate.cpp  EventLoopPrivate.h  PluginManager.cpp  PluginManager.h  WindowClass.h  WindowCommon.h  WindowManager.cpp  WindowManager.h  WindowMonitor.cpp  WindowMonitor.h  WindowPrivate.cpp  WindowPrivate.h
Eternal/Public/Eternal/: Eternal.h
Eternal/Public/Eternal/Core/: Application.cpp  Application.h  Core.h  Engine.cpp  Engine.h  EventLoop.cpp  EventLoop.h  Factory.cpp  Factory.h  Log.cpp  Log.h  Plugin.h  Window.cpp  Window.h
Eternal/Public/Eternal/Math/: Math.h  Matrix.h  Products.h  Types.h  Vector.h
Eternal/Public/Eternal/Utils/: IdGenerator.h  Log.h
Sandbox/: CMakeLists.txt  Sandbox.cpp
Source/: CMakeLists.txt
Source/Core/Private/: EnginePrivate.h
Source/Core/Public/Eternal/Core/: Application.cpp  Application.h  Factory.cpp  Factory.h
Source/Core/Public/Eternal/Core/Engine/: Engine.cpp  Engine.h  EventLoop.cpp  EventLoop.h  Logger.cpp  Logger.h  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h
Source/Core/Public/Eternal/Core/Logging/: ConsoleLogger.cpp  ConsoleLogger.h
Source/Core/Public/Eternal/Core/Math/: Matrix.h  Products.h
Source/Core/Public/Eternal/Core/Utils/: EventQueue.h  IdGenerator.h
Source/Core/Public/Eternal/Core/Window/: Window.cpp  Window.h  WindowEvents.h  WindowManager.cpp  WindowManager.h
Source/Eternal/Core/: Application.cpp  Application.h  CMakeLists.txt
Source/Eternal/Core/Logging/: Logger.cpp  Logger.h
Source/Eternal/Core/Math/: Matrix.h  Types.h
Source/Eternal/Core/Utils/: IdGenerator.h  Overload.h
Source/Eternal/Core/Window/: Window.cpp  Window.h  WindowEvents.h  WindowHandle.h  WindowManager.cpp  WindowManager.h  WindowSettings.h
Source/Eternal/Platform/: CMakeLists.txt  Platform.h
Source/Eternal/Platform/Win32/: Utils.cpp  Win32Platform.cpp  Win32Platform.h
Source/Eternal/Platform/Win32/Window/: GuiThread.cpp  GuiThread.h  NativeWindow.cpp  NativeWindow.h  NativeWindowFactory.cpp  NativeWindowFactory.h  NativeWindowHandle.cpp  NativeWindowHandle.h  NativeWindowManager.cpp  NativeWindowManager.h  RawInput.cpp  RawInput.h  Utils.h  WindowClass.cpp  WindowClass.h  WindowHandle.cpp  WindowHandleFactory.cpp  WindowListener.cpp  WindowListener.h  WindowManager.cpp  WindowManager.h
Source/Platform/Win32/Private/: GuiThread.cpp  GuiThread.h  NativeWindowHandle.cpp  Utils.cpp  WindowClass.cpp  WindowClass.h  WindowListener.cpp
Source/Platform/Win32/Public/Eternal/Platform/: NativeWindow.cpp  NativeWindow.h
Source/Windows/Private/: Utils.cpp  Utils.h
Source/Windows/Public/Eternal/Platform/: NativeWindow.h
Tests/: CMakeLists.txt  Test.cpp  Test.h
Tests/Test/: CMakeLists.txt  Test.cpp  Test.h
Tests/Unit/Core/: TestApplication.cpp  TestLog.cpp
Tests/Unit/Core/Engine/: TestEventLoop.cpp  TestWindow.cpp
Tests/Unit/Core/Math/: TestMatrix.cpp  TestProducts.cpp
Tests/Unit/Core/Utils/: TestEventQueue.cpp  TestIdGenerator.cpp  TestLog.cpp
Tests/Unit/Core/Window/: TestWindow.cpp
Tests/Unit/Math/: TestMatrix.cpp  TestProducts.cpp  TestVector.cpp
Tests/Unit/Utils/: TestIdGenerator.cpp  TestLog.cpp
